--- a/README.Rmd
+++ b/README.Rmd
@@ -80,3 +80,15 @@ The optimized canopy cover threshold for each biome are then used to obtain year
 
 ![Area weighted agreement assessment between change maps derived from IDEAM and Harmonized GFC maps for the categories non-forest, forest, and forest loss.](images/image.png)
 
+## Funding 
+
+This work was supported by The National Aeronautics and Space Administration -NASA Award 80NSSC18K0339.
+
+
+## References
+
+### Publications:
+Lara, W., Londoño, M.C., Gonzalez, I. and Gutierrez‐Velez, V.H., 2022. ecochange: An R‐package to derive ecosystem change indicators from freely available earth observation products. Methods in Ecology and Evolution, 13(11), pp.2379-2388.
+**Gutierrez-Velez VH**, Rodriguez-Escobar J†, Mejía A†, Espejo J, Anaya JA, Blair, ME. Under review. Mapping forest cover and change as continuous variables is essential to advance consistency across forest monitoring products. 
+
+
